--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -3,7 +3,8 @@ BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory containing .bb and .bbappend files, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes*/*/*.bb \
-            ${LAYERDIR}/recipes*/*/*.bbappend"
+            ${LAYERDIR}/recipes*/*/*.bbappend \
+            ${LAYERDIR}/images/*.bb"
 
 BBFILE_COLLECTIONS += "raspberrypi"
 BBFILE_PATTERN_raspberrypi := "^${LAYERDIR}/"
