fix missing many package

--- a/conf/bblayers_sample.conf
+++ b/conf/bblayers_sample.conf
@@ -6,15 +6,15 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  ${HOME}/yocto/poky/meta \
-  ${HOME}/yocto/poky/meta-poky \
-  ${HOME}/yocto/poky/meta-openembedded/meta-oe \
-  ${HOME}/yocto/poky/meta-openembedded/meta-multimedia \
-  ${HOME}/yocto/poky/meta-openembedded/meta-networking \
-  ${HOME}/yocto/poky/meta-openembedded/meta-webserver \
-  ${HOME}/yocto/poky/meta-openembedded/meta-perl \
-  ${HOME}/yocto/poky/meta-openembedded/meta-python \
-  ${HOME}/yocto/poky/meta-qt5 \
-  ${HOME}/yocto/poky/meta-raspberry \
-  ${HOME}/yocto/poky/meta-security \
+  ${TOPDIR}/../meta \
+  ${TOPDIR}/../meta-poky \
+  ${TOPDIR}/../meta-yocto-bsp \
+  ${TOPDIR}/../meta-openembedded/meta-oe \
+  ${TOPDIR}/../meta-openembedded/meta-networking \
+  ${TOPDIR}/../meta-openembedded/meta-python \
+  ${TOPDIR}/../meta-openembedded/meta-multimedia \ 
+  ${TOPDIR}/../meta-openembedded/meta-gnome \
+  ${TOPDIR}/../meta-openembedded/meta-xfce \
+  ${TOPDIR}/../meta-radxa \
+  /home/fanning/yocto1/poky/layers/meta-customer \
   "
