--- a/conf/local_sample.conf
+++ b/conf/local_sample.conf
@@ -1,102 +1,135 @@
-# Local configuration for meta-rpi images
-# Yocto Project 3.0 Poky distribution [zeus] branch
-# This is a sysvinit system
+#
+# This file is your local configuration file and is where all local user settings
+# are placed. The comments in this file give some guide to the options a new user
+# to the system might want to change but pretty much any configuration option can
+# be set in this file. More adventurous users can look at local.conf.extended
+# which contains other examples of configuration which can be placed in this file
+# but new users likely won't need any of them initially.
+#
+# Lines starting with the '#' character are commented out and in some cases the
+# default values are provided as comments to show people example syntax. Enabling
+# the option is a question of removing the # character and making any change to the
+# variable as required.
 
-# mask wireguard from meta-openembedded/meta-networking
-# use version in meta-jumpnow to support kernels < 5.6
-# with wireguard-linux-compat
-BBMASK = "meta-networking/recipes-kernel/wireguard"
+#
+# Machine Selection
+#
+# You need to select a specific machine to target the build with.
+#MACHINE ?= "rockpi-4a-rk3399"
+#MACHINE ?= "rockpi-4b-rk3399"
+#MACHINE ?= "rockpi-4c-rk3399"
+#MACHINE ?= "rockpi-e-rk3328"
+#MACHINE ?= "rockpi-n10-rk3399pro"
+#MACHINE ?= "rockpi-px30"
+MACHINE ?= "rockpi-s-rk3308"
 
-LICENSE_FLAGS_WHITELIST = "commercial"
-
-DISTRO_FEATURES = "ext2 opengl usbhost ${DISTRO_FEATURES_LIBC}"
-
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio"
-
-PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
-PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
-
-PREFERRED_PROVIDER_udev = "eudev"
-VIRTUAL-RUNTIME_init_manager = "sysvinit"
-
-MACHINE_FEATURES_remove = "apm"
-
-IMAGE_FSTYPES = "tar.xz tar.gz rpi-sdimg"
-
-# Choose the board you are building for
-#MACHINE = "raspberrypi"
-#MACHINE = "raspberrypi0"
-#MACHINE = "raspberrypi0-wifi"
-#MACHINE = "raspberrypi2"
-MACHINE = "raspberrypi3"
-#MACHINE = "raspberrypi4"
-#MACHINE = "raspberrypi-cm"
-#MACHINE = "raspberrypi-cm3"
 
 IMAGE_INSTALL_append += " \
+    nodejs \
+    nodejs-npm \
     ntp \
     ntp-tickadj \
     wpa-supplicant \
     cronie \
+    dropbear \
     htop \
     sudo \
     wget \
     git \
     vim \
-    libqmi \
-    cmake \
     opkg \
+    libqmi \
     sim7600eh \
-    apache2 \
 "
 
-CORE_IMAGE_EXTRA_INSTALL += "\
-       opencv \
-       opencv-samples \
-"
-# Choices are Image or zImage if NOT using u-boot (no u-boot is the default)
-# Choices are uImage or zImage if using u-boot, though if you choose zImage
-# with u-boot you will also have to change the boot script boot command
-KERNEL_IMAGETYPE = "zImage"
+BB_NUMBER_THREADS ?= "6"
+PARALLEL_MAKE ?= "-j 6"
 
-# uncomment for kernels < 5.6
-WIREGUARD_COMPAT = "1"
-
-DISABLE_VC4GRAPHICS = "1"
-DISABLE_OVERSCAN = "1"
-ENABLE_UART = "1"
-ENABLE_RPI3_SERIAL_CONSOLE = "1"
-SERIAL_CONSOLES = "115200;ttyAMA0"
-# SERIAL_CONSOLES_forcevariable = ""
-
-PREFERRED_VERSION_linux-raspberrypi = "4.19.%"
-
-DISTRO = "poky"
-PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
-# We default to enabling the debugging tweaks.
-PACKAGE_FEED_URIS = "http://192.168.1.123:5678"
-EXTRA_IMAGE_FEATURES += " package-management "
-IMAGE_ROOTFS_EXTRA_SPACE = " 131072"
-
-# i686 or x86_64
-SDKMACHINE = "x86_64"
-
-# for no root passwd uncomment the following and comment the two extra user lines
-#EXTRA_IMAGE_FEATURES = "debug-tweaks"
-
-# for a root passwd, change jumpnowtek below to your password
+IMAGE_FSTYPES_append = " ext4 tar.xz tar.gz"
+EXTRA_IMAGE_FEATURES += "debug-tweaks "
 INHERIT += "extrausers"
 EXTRA_USERS_PARAMS  = "usermod -P 000 root; "
-EXTRA_USERS_PARAMS += "useradd -P 000 ninhnn2;"
-EXTRA_USERS_PARAMS += "usermod -a -G sudo ninhnn2;"
-EXTRA_USERS_PARAMS  = "usermod -P 111 ninhnn2; "
+#EXTRA_USERS_PARAMS += "useradd -P 000 epcb;"
+#EXTRA_USERS_PARAMS += "usermod -a -G sudo epcb;"
 
-# this will force root to change password on first login
-INHERIT += "chageusers"
-CHAGE_USERS_PARAMS = "chage -d0 root; "
+DISTRO ?= "poky"
+#
+# Package Management configuration
+#
+# This variable lists which packaging formats to enable. Multiple package backends
+# can be enabled at once and the first item listed in the variable will be used
+# to generate the root filesystems.
+# Options are:
+#  - 'package_deb' for debian style deb files
+#  - 'package_ipk' for ipk files are used by opkg (a debian style embedded package manager)
+#  - 'package_rpm' for rpm style packages
+# E.g.: PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
+# We default to rpm:
+PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
+# We default to enabling the debugging tweaks.
+PACKAGE_FEED_URIS = "http://192.168.1.222:5678"
+EXTRA_IMAGE_FEATURES += " package-management "
+#
+# Additional image features
+#
+# The following is a list of additional classes to use when building images which
+# enable extra features. Some available options which can be included in this variable
+# are:
+#   - 'buildstats' collect build statistics
+#   - 'image-mklibs' to reduce shared library files size for an image
+#   - 'image-prelink' in order to prelink the filesystem image
+# NOTE: if listing mklibs & prelink both, then make sure mklibs is before prelink
+# NOTE: mklibs also needs to be explicitly enabled for a given image, see local.conf.extended
+USER_CLASSES ?= "buildstats image-mklibs image-prelink"
 
-USER_CLASSES = "image-mklibs image-prelink"
+#
+# Interactive shell configuration
+#
+# Under certain circumstances the system may need input from you and to do this it
+# can launch an interactive shell. It needs to do this since the build is
+# multithreaded and needs to be able to handle the case where more than one parallel
+# process may require the user's attention. The default is iterate over the available
+# terminal types to find one that works.
+#
+# Examples of the occasions this may happen are when resolving patches which cannot
+# be applied, to use the devshell or the kernel menuconfig
+#
+# Supported values are auto, gnome, xfce, rxvt, screen, konsole (KDE 3.x only), none
+# Note: currently, Konsole support only works for KDE 3.x due to the way
+# newer Konsole versions behave
+#OE_TERMINAL = "auto"
+# By default disable interactive patch resolution (tasks will just fail instead):
 PATCHRESOLVE = "noop"
-RM_OLD_IMAGE = "1"
-INHERIT += "rm_work"
+
+#
+# Disk Space Monitoring during the build
+#
+# Monitor the disk space during the build. If there is less that 1GB of space or less
+# than 100K inodes in any key build location (TMPDIR, DL_DIR, SSTATE_DIR), gracefully
+# shutdown the build. If there is less that 100MB or 1K inodes, perform a hard abort
+# of the build. The reason for this is that running completely out of space can corrupt
+# files and damages the build in ways which may not be easily recoverable.
+# It's necesary to monitor /tmp, if there is no space left the build will fail
+# with very exotic errors.
+BB_DISKMON_DIRS ??= "\
+    STOPTASKS,${TMPDIR},1G,100K \
+    STOPTASKS,${DL_DIR},1G,100K \
+    STOPTASKS,${SSTATE_DIR},1G,100K \
+    STOPTASKS,/tmp,100M,100K \
+    ABORT,${TMPDIR},100M,1K \
+    ABORT,${DL_DIR},100M,1K \
+    ABORT,${SSTATE_DIR},100M,1K \
+    ABORT,/tmp,10M,1K"
+
+# CONF_VERSION is increased each time build/conf/ changes incompatibly and is used to
+# track the version of this file when it was generated. This can safely be ignored if
+# this doesn't mean anything to you.
 CONF_VERSION = "1"
+
+#DISTRO_FEATURES_append = " pam systemd x11"
+#VIRTUAL-RUNTIME_init_manager = "systemd"
+#PACKAGECONFIG_append_pn-systemd = " resolved networkd"
+DISTRO_FEATURES_remove = "wayland x11"
+
+# Uncomment the following line to add the extra packages
+#IMAGE_INSTALL_append = " create-ap"
